	* GIF animation file exploding is now done internally in mtPaint, not Gifsicle
	* "Explode Frames" can now save frames in any suitable supported file format
	* Netpbm file formats (PBM/PGM/PPM/PAM) save/load added
	* Better support for loading CMYK TIFF files as RGB/RGBA
	* ICC colour profiles embedded in PNG, JPEG and TIFF images now can be applied on load (using LittleCMS)
	* "Palette->Open" now can extract palette from indexed images in any supported file format
	* "Scale Canvas" now has 3 boundary extension modes - Mirror, Tile, Void
	* Filename and modified status now part of undo system
	* Toolbar and menu icons are now themeable (Preferences->Paths->Default Theme)
	* Command line globbing now possible using -w option, e.g. mtpaint -w "*.jpg"
	* Drawing and fill tools now are 2-3 times faster
	* Workaround for bug in GTK+ versions 2.14.0 - 2.14.2, 2.16.0, 2.16.1 added (spin buttons had wrong max values)
	* BUGFIX - Problems with editing large images at high zoom levels are now eliminated
	* BUGFIX - Titlebar now displays new image's filename after loading layers file, as it should
	* BUGFIX - Layers list now correctly displays selected layer after loading layers file
	* BUGFIX - Loading TIFF files with X or Y mirroring doesn't cause crash
	* BUGFIX - Planar TIFF files with alpha now load properly
	* BUGFIX - Transparency in indexed TGA files is now read properly
	* BUGFIX - Failed operations now do not flag image as modified
	* BUGFIX - Gradient colours are now properly updated after converting indexed image to RGB

3.31	2009-4-15

	* Japanese translation updated by Norihiro YONEDA
	* Swedish translation updated by Daniel Nylander and Fredrik Forsmo
	* French translation updated by Plume
	* Builtin file selector uses stock file and directory icons on GTK+2
	* Default settings are loaded from file /etc/mtpaint/mtpaintrc if it exists
	* BUGFIX - Compilation with GTK+ colour selector now works